Add jSpecify node.domain package.